syntax = "proto3";

option go_package = "github.com/statistico/statistico-data/internal/proto/stats";

package stats;

import "google/protobuf/wrappers.proto";

service StatsService {
    rpc GetPlayerStatsForFixture(FixtureRequest) returns (StatsResponse) {}
    rpc GetLineUpForFixture(FixtureRequest) returns (LineUpResponse) {}
}

message FixtureRequest {
    uint64 fixture_id = 1;
}

message StatsResponse {
    repeated PlayerStats home_team = 1;
    repeated PlayerStats away_team = 2;
}

message LineUpResponse {
    LineUp home_team = 1;
    LineUp away_team = 2;
}

message PlayerStats {
    uint64 player_id = 1;
    google.protobuf.Int32Value shots_total = 2;
    google.protobuf.Int32Value shots_on_goal = 3;
    google.protobuf.Int32Value goals_scored = 4;
    google.protobuf.Int32Value goals_conceded = 5;
    google.protobuf.Int32Value assists = 6;
}

message LineUp {
    repeated Player start = 1;
    repeated Player bench = 2;
}

message Player {
    uint64 player_id = 1;
    string position = 2;
    google.protobuf.Int32Value formation_position = 3;
    bool is_substitute = 4;
}
